feat(doc): derive McpDocGenerator toolSpecs directly from ToolRegistrar and add parameter metadata sync test